--- a/angular.json
+++ b/angular.json
@@ -21,10 +21,14 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "server": "src/main.server.ts",
+"styles": [
+  "node_modules/bootstrap/dist/css/bootstrap.min.css",
+  "src/styles.css"
+],
+"scripts": [
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+],
+"server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
@@ -54,18 +58,18 @@
           },
           "defaultConfiguration": "production"
         },
-        "serve": {
-          "builder": "@angular/build:dev-server",
-          "configurations": {
-            "production": {
-              "buildTarget": "Employees:build:production"
+          "serve": {
+            "builder": "@angular-devkit/build-angular:dev-server",
+            "configurations": {
+              "production": {
+                "buildTarget": "Employees:build:production"
+              },
+              "development": {
+                "buildTarget": "Employees:build:development"
+              }
             },
-            "development": {
-              "buildTarget": "Employees:build:development"
-            }
+            "defaultConfiguration": "development"
           },
-          "defaultConfiguration": "development"
-        },
         "extract-i18n": {
           "builder": "@angular/build:extract-i18n"
         },
@@ -86,5 +90,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a6f23e3c-cfdd-4bdb-824b-fbb6f198e20d"
   }
 }
